--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,114 @@
-accelerate==0.24.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.12
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
+asttokens==3.0.0
+attrs==25.3.0
 autocommand==2.2.2
 backports.tarfile==1.2.0
-certifi==2025.6.15
-charset-normalizer==3.4.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.2.1
 colorama==0.4.6
-diffusers==0.30.2
-filelock==3.13.1
-fsspec==2024.6.1
-huggingface-hub==0.33.0
+comm==0.2.2
+contourpy==1.3.2
+cycler==0.12.1
+debugpy==1.8.14
+decorator==5.2.1
+distro==1.9.0
+duckduckgo-search==8.0.2
+eli5==0.15.0
+executing==2.2.0
+filelock==3.18.0
+fonttools==4.57.0
+frozenlist==1.7.0
+fsspec==2025.5.1
+geographiclib==2.0
+geopy==2.4.1
+graphviz==0.20.3
+h11==0.16.0
+h3==4.2.2
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
-importlib-metadata==8.7.0
+importlib-metadata==8.0.0
 inflect==7.3.1
+ipykernel==6.29.5
+ipython==9.1.0
+ipython-pygments-lexers==1.1.1
 jaraco.collections==5.1.0
 jaraco.context==5.3.0
 jaraco.functools==4.0.1
 jaraco.text==3.12.1
-jinja2==3.1.4
-MarkupSafe==2.1.5
+jedi==0.19.2
+jinja2==3.1.6
+jiter==0.10.0
+joblib==1.4.2
+jupyter-client==8.6.3
+jupyter-core==5.7.2
+kiwisolver==1.4.8
+lxml==5.4.0
+MarkupSafe==3.0.2
+matplotlib==3.10.1
+matplotlib-inline==0.1.7
 more-itertools==10.3.0
 mpmath==1.3.0
-networkx==3.2.1
-numpy==1.26.3
-packaging==25.0
-peft==0.8.2
-pillow==11.0.0
-pip==25.1.1
-platformdirs==4.2.2
+multidict==6.4.4
+narwhals==1.35.0
+nest-asyncio==1.6.0
+networkx==3.5
+numpy==2.1.2
+openai==1.86.0
+packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+pillow==11.2.1
+pip==25.0.1
+platformdirs==4.3.7
+plotly==6.0.1
+primp==0.15.0
+prompt-toolkit==3.0.51
+propcache==0.3.2
 psutil==7.0.0
+pure-eval==0.2.3
+pyaml==25.1.0
+pydantic==2.11.5
+pydantic-core==2.33.2
+pygments==2.19.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+pywin32==310
 PyYAML==6.0.2
-regex==2024.11.6
-requests==2.32.4
-safetensors==0.5.3
+pyzmq==26.4.0
+requests==2.32.3
+scikit-learn==1.6.1
+scikit-optimize==0.10.2
+scipy==1.15.2
+seaborn==0.13.2
 setuptools==80.9.0
-sympy==1.13.3
-tokenizers==0.15.2
+six==1.17.0
+sniffio==1.3.1
+stack-data==0.6.3
+sympy==1.14.0
+tabulate==0.9.0
+threadpoolctl==3.6.0
 tomli==2.0.1
-torch==2.2.2+cu118
-torchvision==0.17.2+cu118
+torch==2.7.1+cu118
+torchaudio==2.7.1
+torchvision==0.22.1
+tornado==6.4.2
 tqdm==4.67.1
-transformers==4.38.2
+traitlets==5.14.3
 typeguard==4.3.0
-typing-extensions==4.12.2
-urllib3==2.5.0
+typing-extensions==4.14.0
+typing-inspection==0.4.1
+tzdata==2025.2
+urllib3==2.4.0
+wcwidth==0.2.13
 wheel==0.45.1
-zipp==3.23.0
+xgboost==3.0.0
+yarl==1.20.1
+zipp==3.19.2
