--- a/requirements.txt
+++ b/requirements.txt
@@ -1,233 +1,16 @@
-absl-py==2.2.2
-accelerate==0.29.3
-ale-py==0.10.2
-annotated-types==0.7.0
-antlr4-python3-runtime==4.9.3
-anyio==4.9.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==3.0.0
-astunparse==1.6.3
-async-lru==2.0.5
-atari-py==0.2.9
-attrs==25.3.0
-autocommand==2.2.2
-AutoROM==0.4.2
-autorom-accept-rom-license==0.6.1
-babel==2.17.0
-backports.tarfile==1.2.0
-beautifulsoup4==4.13.4
-bitsandbytes==0.46.0
-bleach==6.2.0
-cachetools==5.5.2
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-cloudpickle==3.1.1
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.3.0
-cycler==0.12.1
-Cython==3.0.12
-debugpy==1.8.13
-decorator==5.2.1
-defusedxml==0.7.1
-diffusers==0.29.2
-distro==1.9.0
-dm-control==1.0.28
-dm-env==1.6
-dm-tree==0.1.8
-docker-pycreds==0.4.0
-duckduckgo-search==8.0.2
-etils==1.5.2
-eval-type-backport==0.2.2
-exceptiongroup==1.2.2
-executing==2.2.0
-fasteners==0.19
-fastjsonschema==2.21.1
-filelock==3.13.1
-flatbuffers==25.2.10
-fonttools==4.57.0
-fqdn==1.5.1
-fsspec==2024.6.1
-gast==0.4.0
-git-filter-repo==2.47.0
-gitdb==4.0.12
-GitPython==3.1.44
-glfw==2.9.0
-google-auth==2.39.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.71.0
-gym==0.25.1
-gym-notices==0.0.8
-gym-super-mario-bros==7.3.0
-h11==0.14.0
-h5py==3.13.0
-httpcore==1.0.8
-httpx==0.28.1
-huggingface-hub==0.33.0
-hydra-core==1.3.2
-hydra-submitit-launcher==1.2.0
-idna==3.10
-imageio==2.37.0
-imageio-ffmpeg==0.6.0
-importlib-metadata==8.6.1
-importlib-resources==6.5.2
-inflect==7.3.1
-intel-openmp==2021.4.0
-ipykernel==6.29.5
-ipython==8.18.1
-ipywidgets==8.1.6
-isoduration==20.11.0
-jaraco.collections==5.1.0
-jaraco.context==5.3.0
-jaraco.functools==4.0.1
-jaraco.text==3.12.1
-jedi==0.19.2
-jinja2==3.1.4
-jiter==0.10.0
-json5==0.12.0
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2025.4.1
-jupyter==1.1.1
-jupyter-client==8.6.3
-jupyter-console==6.6.3
-jupyter-core==5.7.2
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter-server==2.15.0
-jupyter-server-terminals==0.5.3
-jupyterlab==4.4.1
-jupyterlab-pygments==0.3.0
-jupyterlab-server==2.27.3
-jupyterlab-widgets==3.0.14
-keras==2.13.1
-kiwisolver==1.4.7
-labmaze==1.0.6
-libclang==18.1.1
-lxml==5.4.0
-lz4==4.4.4
-Markdown==3.7
-MarkupSafe==2.1.5
-matplotlib==3.9.4
-matplotlib-inline==0.1.7
-mistune==3.1.3
-mkl==2021.4.0
-more-itertools==10.3.0
-moviepy==2.1.2
-mpmath==1.3.0
-mujoco==3.3.1
-mujoco-py==2.1.2.14
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nes-py==8.2.1
-nest-asyncio==1.6.0
-networkx==3.2.1
-notebook==7.4.1
-notebook-shim==0.2.4
-numpy==1.24.4
-oauthlib==3.2.2
-omegaconf==2.3.0
-openai==1.86.0
-opencv-python==4.11.0.86
-opt-einsum==3.4.0
-orjson==3.10.16
-overrides==7.7.0
-packaging==24.2
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
+accelerate==1.8.1
+diffusers==0.34.0
+duckduckgo_search==8.0.5
+matplotlib==3.10.3
+openai==1.93.0
+pandas==2.3.0
 peft==0.15.2
-pillow==11.0.0
-pip==25.1.1
-platformdirs==4.3.7
-primp==0.15.0
-proglog==0.1.11
-prometheus-client==0.21.1
-prompt-toolkit==3.0.50
-protobuf==3.20.3
-psutil==7.0.0
-pure-eval==0.2.3
-pyasn1==0.6.1
-pyasn1-modules==0.4.2
-pycparser==2.22
-pydantic==2.11.3
-pydantic-core==2.33.1
-pygame==2.6.1
-pyglet==1.5.21
-pygments==2.19.1
-PyOpenGL==3.1.9
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-python-json-logger==3.3.0
-pytz==2025.2
-pywin32==310
-pywinpty==2.0.15
-PyYAML==6.0.2
-pyzmq==26.3.0
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-requests-oauthlib==2.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.24.0
-rsa==4.9.1
-safetensors==0.5.3
-scipy==1.13.1
-Send2Trash==1.8.3
-sentry-sdk==2.27.0
-setproctitle==1.3.5
-setuptools==79.0.1
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-soupsieve==2.7
-stack-data==0.6.3
-submitit==1.5.2
-sympy==1.13.1
-tbb==2021.13.1
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensordict==0.7.2
-tensorflow==2.13.1
-tensorflow-estimator==2.13.0
-tensorflow-intel==2.13.1
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==3.0.1
-terminado==0.18.1
-tinycss2==1.4.0
-tokenizers==0.15.2
-tomli==2.2.1
-torch==2.3.0
-torchaudio==2.6.0
-torchrl==0.7.2
-torchvision==0.21.0
-tornado==6.4.2
+Pillow==11.3.0
+python-dotenv==1.1.1
+Requests==2.32.4
+setuptools==58.1.0
+torch==2.7.1
+torchvision==0.22.1
 tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.39.3
-typeguard==4.3.0
-types-python-dateutil==2.9.0.20241206
-typing-extensions==4.13.0
-typing-inspection==0.4.0
-tzdata==2025.2
-uri-template==1.3.0
-urllib3==2.4.0
-wandb==0.19.10
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-werkzeug==3.1.3
-wheel==0.45.1
-widgetsnbextension==4.0.14
-wrapt==1.17.2
-xformers==0.0.26.post1
-zipp==3.21.0
+transformers==4.53.0
+bitsandbytes==0.46.0
